src/main/java/com/example/connectedappliance/shared/error/package-info.java
/**
 * Sanitized HTTP problem definitions and validation mapping shared by API modules.
 *
 * <p>This package owns the common error boundary and must not depend on feature modules.
 */
package com.example.connectedappliance.shared.error;
